--- a/HTML_Files/hobbies.html
+++ b/HTML_Files/hobbies.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My Hobbies</title>
-    <link rel="stylesheet" href="C:\Users\mel77\Desktop\webdev\Personal_Site\CSS_Files\stylesheet.css">
+    <link rel="stylesheet" href="CSS_Files/stylesheet.css">
   </head>
   <body>
     <nav>
