--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <title>Mohamed's Personla site </title>
-  <link rel="stylesheet" href="C:\Users\mel77\Desktop\webdev\Personal_Site\CSS_Files\stylesheet.css">
+  <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
   </center>
   <table cellspacing="20">
     <tr>
-      <td><img src="C:\Users\mel77\Desktop\webdev\Personal_Site\Image _Files\my_photo.png" alt="Mohamed profile picture" width="150" height="150" /></td>
+      <td><img src="my_photo.png" alt="Mohamed profile picture" width="150" height="150" /></td>
       <td>
         <h3>Mohamed Gomri</h3>
         <p><em>Professional web developper / Statistician</em></p>
