--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>My Contact Info</title>
-  <link rel="stylesheet" href="C:\Users\mel77\Desktop\webdev\Personal_Site\CSS_Files\stylesheet.css">
+  <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <body>
